# FlipFlop

./: .gitignore  README.md  pyproject.toml  requirements.txt
analysis/: metrics.txt  ncu_metrics.csv
experiments/: a2.py  attention.py  baseline.cu  bayes_opt_float16.json  bayes_opt_float32.json  bayes_opt_float64.json  gemm.cu  gemm_optimizer.py  temp_3g3n_kzo.cu  temp_rwjz7x5x.cu  tuner.py
experiments/casestudy_1/: calibration_pl250.json  delete.txt  final_results.csv  gpt-eval.py  gpt-eval.txt  llama3.cu  llama3_tune.py  rq4.sh  rq4_analysis.py  rq4_experiment.py  rq4_predictive.sh  rq4_tuner.py  stat.py  temp_kaav50nc.cu  temp_lg3ae0gy.cu  temp_s36loh97.cu  tinystories_runcuda_1024_100W_results.csv  tinystories_runcuda_1024_125W_results.csv  tinystories_runcuda_1024_150W_results.csv  tinystories_runcuda_1024_175W_results.csv  tinystories_runcuda_1024_200W_results.csv  tinystories_runcuda_1024_225W_results.csv  tinystories_runcuda_1024_250W_results.csv  tinystories_runcuda_1024_results.csv  tinystories_runcuda_128_100W_results.csv  tinystories_runcuda_128_125W_results.csv  tinystories_runcuda_128_150W_results.csv  tinystories_runcuda_128_175W_results.csv  tinystories_runcuda_128_200W_results.csv  tinystories_runcuda_128_225W_results.csv  (+67 more)
libs/: calibrator.py  cubindings.py
predictive_model/: PTXAnalyzer.py  actual_time_power_analysis.py  analysis.py  calibration.json  calibration.py  delete.txt  energy_model.py  gpu_common.py  matmul  plot_pet.py  power_model.py  pred_time_power_analysis.py  runner.sh  time_model.py  tuned_matmul.cu
utils/: create_folder.py
(+203 files in other folders)
