[project]
name = "flipflop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "codecarbon==3.0.4",
    "cupy-cuda13x>=14.0.1",
    "kernel-tuner==1.2.0",
    "lark==1.2.2",
    "matplotlib==3.10.3",
    "nvidia-ml-py==12.570.86",
    "pandas==2.3.1",
    "pycuda>=2025.1",
    "pynvml==12.0.0",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "scipy==1.16.0",
    "seaborn==0.13.2",
    "statsmodels==0.14.4",
    "torch==2.7.0",
]
